--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -75,7 +75,7 @@
                 }
 
                 $("#layers").on("change", function(){
-                    getLayer($("#layers"), function(error, result){
+                    getLayer($("#layers").val(), function(error, result){
                         if (error) {
                             throw error;
                         } else {
@@ -142,7 +142,7 @@ function getLayer(datasource, callback){
         url:  servers.gis.address + "/api/v1/layer/" + datasource + "?apikey=" + servers.gis.apikey,
         dataType: 'JSON',
         success: function (data) {
-            callback(null, data)
+            callback(null, data);
         },
         error: function(xhr,errmsg,err) {
             return callback(new Error(errmsg));
