--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -40,6 +40,7 @@
         <script>
 
             var map;
+            var geojsonLayer = null;
 
             var baselayers = {{ baselayers|safe }};
             var vectorlayers = {{ layers|safe }};
@@ -79,7 +80,10 @@
                         if (error) {
                             throw error;
                         } else {
-                            console.log(result);
+                            if (geojsonLayer) {
+                                map.removeLayer(geojsonLayer);
+                            }
+                            geojsonLayer = L.geoJson(data);
                         }
                     });
                 });
