learn locations from auth

--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -83,7 +83,7 @@
                             if (geojsonLayer) {
                                 map.removeLayer(geojsonLayer);
                             }
-                            geojsonLayer = L.geoJson(data);
+                            geojsonLayer = L.geoJson(result);
                         }
                     });
                 });
