learn locations from auth

--- a/WallOfDenial/templates/map.html
+++ b/WallOfDenial/templates/map.html
@@ -84,6 +84,7 @@
                                 map.removeLayer(geojsonLayer);
                             }
                             geojsonLayer = L.geoJson(result);
+                            geojsonLayer.addTo(map);
                         }
                     });
                 });
